--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=terraform
 
 ### Terraform ###
+# Local terraform lock files
+*.terraform.lock.*
+
 # Private key ending with .pem
 *.pem
 
